fix overflowing

--- a/frontend/src/components/SpecificQuestionPage/SpecificQuestion.css
+++ b/frontend/src/components/SpecificQuestionPage/SpecificQuestion.css
@@ -203,8 +203,13 @@
     flex-direction: column;
     flex-grow: 1;
     gap: 10px;
+    width: 95%;
 }
-
+#answer-info-container p {
+    word-wrap: break-word;
+    white-space: pre-wrap;
+    overflow-wrap: break-word;
+}
 #answerCardButton {
     width: 10%;
 }
@@ -213,7 +218,7 @@
     gap: 1rem;
     margin-bottom: 2rem;
     max-width: 800px;
-    padding-bottom: 40%;
+    /* padding-bottom: 40%; */
 }
 
 #title-ask-question {
